// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestInviteForm initial status matches the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="css-0"
      >
        <h2
          class="css-18dyf6a"
        >
          Request an invite
        </h2>
        <div
          class="css-108trlw"
          data-testid="separator-line"
        />
        <div
          class="css-2ycnf4"
        >
          <input
            class="css-1xshicx"
            name="name"
            placeholder="Full name"
          />
          <input
            class="css-1xshicx"
            name="email"
            placeholder="Email"
          />
          <input
            class="css-1xshicx"
            name="confirmEmail"
            placeholder="Confirm Email"
          />
        </div>
        <button
          class="css-yaz3o2"
          data-testid="submit-button"
          type="submit"
        >
          Send
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="css-0"
    >
      <h2
        class="css-18dyf6a"
      >
        Request an invite
      </h2>
      <div
        class="css-108trlw"
        data-testid="separator-line"
      />
      <div
        class="css-2ycnf4"
      >
        <input
          class="css-1xshicx"
          name="name"
          placeholder="Full name"
        />
        <input
          class="css-1xshicx"
          name="email"
          placeholder="Email"
        />
        <input
          class="css-1xshicx"
          name="confirmEmail"
          placeholder="Confirm Email"
        />
      </div>
      <button
        class="css-yaz3o2"
        data-testid="submit-button"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RequestInviteForm show the success page, if the form is submitted, passed all validation rules, and server response is 200 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="css-0"
      >
        <h2
          class="css-18dyf6a"
        >
          All done!
        </h2>
        <div
          class="css-108trlw"
          data-testid="separator-line"
        />
        <h3
          class="css-bao8lp"
        >
          You will be one of the first to experience Broccoli & Co. when w launch
        </h3>
        <button
          class="css-yaz3o2"
          data-testid="submit-button"
          type="submit"
        >
          OK
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="css-0"
    >
      <h2
        class="css-18dyf6a"
      >
        All done!
      </h2>
      <div
        class="css-108trlw"
        data-testid="separator-line"
      />
      <h3
        class="css-bao8lp"
      >
        You will be one of the first to experience Broccoli & Co. when w launch
      </h3>
      <button
        class="css-yaz3o2"
        data-testid="submit-button"
        type="submit"
      >
        OK
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
